--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -143,7 +143,7 @@
 
 
 
-
+<% if false %>
         <% if user_signed_in? && current_user == @user%>
           <p>Hemen bağış toplamaya başlamak için, gönüllüsü olacağınız S.T.K.’yı seçin:<br/></p>
           <div>
@@ -154,6 +154,9 @@
           %>
           </div>
         <% end %>
+<% end %>
+
+
       </div>
     </div>
   </div>
