--- a/app/views/organizations/includes/_share_options.erb
+++ b/app/views/organizations/includes/_share_options.erb
@@ -1,60 +1,64 @@
 <div id="fb-root"></div>
 
+<% if(defined? text && text)
+    share_msg = text
+  else
+    share_msg = @page.title
+  end %>
 
-  <ul class="clearfix rc-bottom">
-
-
-    <li>
-      <div class="fb-like" data-send="true"
-      data-show-faces="true"
-      <% if defined? url %>
-        data-href="<%=url%>"
-        data-layout="standard"
-      <% else %>
-        data-layout="box_count"
-      <% end %>
-
-      ></div>
-    </li>
+<ul class="clearfix rc-bottom list-share">
 
 
-    <li>
-      <a href="http://twitter.com/share"
-         class="twitter-share-button"
-         <% if defined? url%>
-          data-url="<%=url%>"
-          data-count="none"
-         <% else %>
-          data-count="vertical"
+  <li>
+    <div class="fb-like"
+         data-send="true"
+         data-show-faces="false"
+         data-layout="standard"
+         <% if defined? url %>
+            data-href="<%=url%>"
          <% end %>
-         data-lang="tr"
-         data-related="ben_varim"
-         data-hashtags="benvarim"
-         data-text="<% if(defined? text && text) %><%= text %><% else %><%= @page.title %><% end %>">Tweetle</a>
-    </li>
+    ></div>
+  </li>
 
 
+  <li>
+    <a href="http://twitter.com/share"
+       class="twitter-share-button"
+       <% if defined? url%>
+        data-url="<%=url%>"
+        data-count="none"
+       <% else %>
+        data-count="vertical"
+       <% end %>
+       data-lang="tr"
+       data-related="ben_varim"
+       data-hashtags="benvarim"
+       data-text="<%= share_msg %>">Tweetle</a>
+  </li>
 
-    <li>
-      <!-- Place this tag where you want the +1 button to render -->
-      <g:plusone size="tall"
-      <% if defined? url%>
-        data-href="<%=url%>"
-        data-annotation="none"
-      <% else %>
-        data-annotation="bubble"
-      <% end %>
-      ></g:plusone>
 
-    </li>
+  <li>
+    <!-- Place this tag where you want the +1 button to render -->
+    <g:plusone
+               data-annotation="none"
+               <% if defined? url %>
+                  data-href="<%=url%>"
+               <% end %>
+    ></g:plusone>
+  </li>
 
 
-    <li>
-      <span  class='st_email_vcount' displayText='Email'></span>
-    </li>
+  <li>
+    <span class='st_email_hcount'
+          displayText='Email ile Paylaş'
+          st_url="<%= url %>"
+          st_title="<%= share_msg %>"
+    ></span>
+  </li>
 
 <!--     <li>
-      <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-      <script type="IN/Share"  data-counter="top" data-title="Paylaş"></script>
-    </li> -->
-  </ul>
+    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+    <script type="IN/Share"  data-counter="top" data-title="Paylaş"></script>
+  </li> -->
+
+</ul>
