--- a/app/views/organizations/includes/_widget_supporters.erb
+++ b/app/views/organizations/includes/_widget_supporters.erb
@@ -1,36 +1,38 @@
 <% if BvFeature.is_support_enabled? %>
-
-
   <div class="w-supporters">
 
-
-    <% if @support %>
-      <%=link_to "destekci sayini arttir", "javascript:openSupportDialog();", :class => "button green large button-destekle"%>
-    <% else%>
+    <% if not @support %>
         <%=link_to "Destekle", new_support_path(@organization), :class => "button green large button-destekle"%>
     <% end %>
 
-      <div class="w-content">
-        <div class="supporters">
-          <% if @organization.supports.length != 0 %>
-            <p><strong>Destekleyenler:</strong> <%= @organization.supports.length %> Kişi</p>
-            <!-- TODO(Yigit): Toplam destekleyen kisi sayisi goruntulensin. -->
+    <div class="w-content">
+      <div class="supporters">
+        <% if @organization.supports.length != 0 %>
+          <p><strong>Destekleyenler:</strong> <%= @organization.supports.length %> Kişi</p>
 
 
-            <% @organization.supports.order("score DESC").each do |s|%>
-              <div class="supporter clearfix">
-                <div class="s-photo">
-                  <%= image_tag s.user.photo.url(:thumb) %>
-                </div>
-                <div class="s-name">
-                  <%=link_to s.user.name, s.user%> (<%=s.score%>)
-                </div>
+          <% @organization.supports.order("score DESC").each do |s|%>
+            <div class="supporter clearfix">
+              <div class="s-photo">
+                <%= image_tag s.user.photo.url(:thumb) %>
               </div>
-            <% end %>
-          <% else %>
-            <p>İlk destekleyen sen ol!</p>
+              <div class="s-name">
+                <%=link_to s.user.name, s.user%> (<%=s.score%>)
+              </div>
+            </div>
           <% end %>
-        </div>
-      </div><!-- .w-content -->
+        <% else %>
+          <p>İlk destekleyen sen ol!</p>
+        <% end %>
+      </div>
+    </div><!-- .w-content -->
+
+
+    <% if @support %>
+    <div class="more-support">
+      <%=link_to "+ Daha fazla destek topla", "javascript:openSupportDialog();", :class => ""%>
+    </div>
+    <% end %>
+
   </div>
 <% end %>
