Kullanici sozlesmesi tarihi yenilendi

--- a/app/views/home/includes/_legal.erb
+++ b/app/views/home/includes/_legal.erb
@@ -1,5 +1,5 @@
 <p class=MsoNormal><i style='mso-bidi-font-style:normal'>Son güncelleme tarihi:
-27 Mart 2011<o:p></o:p></i></p>
+24 Temmuz 2012<o:p></o:p></i></p>
 
 <p class=MsoNormal><b style='mso-bidi-font-weight:normal'>Genel Kullanım
 Ko&#351;ulları<o:p></o:p></b></p>
