--- a/app/views/admin/report.html.erb
+++ b/app/views/admin/report.html.erb
@@ -25,25 +25,25 @@
           <td>Açılan yeni sayfa sayısı</td><td><%=@count_new_page%></td>
         </tr>
         <tr>
-          <td>Hedeflenen bağış miktarı</td><td><%=@amount_new_page_goal%></td>
+          <td>Hedeflenen bağış miktarı</td><td><%=number_with_precision(@amount_new_page_goal, :locale=>:tr)%> TL</td>
         </tr>
         <tr>
-          <td>Toplam bağış miktarı</td><td><%=@total_fund%></td>
+          <td>Toplam bağış miktarı</td><td><%=number_with_precision(@total_fund, :locale=>:tr)%> TL</td>
         </tr>
         <tr>
-          <td>Sayfalar aracılığıyla</td><td><%=@total_fund_from_page%></td>
+          <td>Sayfalar aracılığıyla</td><td><%=number_with_precision(@total_fund_from_page, :locale=>:tr)%> TL</td>
         </tr>
         <tr>
-          <td>Kurum profilinden</td><td><%=@total_fund_from_org%></td>
+          <td>Kurum profilinden</td><td><%=number_with_precision(@total_fund_from_org, :locale=>:tr)%> TL</td>
         </tr>
         <tr>
           <td>Bağışçı sayısı</td><td><%=@total_funder%></td>
         </tr>
         <tr>
-          <td>Kişi başı bağış miktarı</td><td><%=@total_fund_from_page/@total_funder unless @total_funder == 0%></td>
+          <td>Kişi başı bağış miktarı</td><td><%=number_with_precision(@total_fund/@total_funder, :locale=>:tr)+" TL" unless @total_funder == 0%></td>
         </tr>
         <tr>
-          <td>Sayfa başı bağış miktarı</td><td><%=@total_fund_from_page/@count_new_page unless @count_new_page == 0%></td>
+          <td>Sayfa başı bağış miktarı</td><td><%=number_with_precision(@total_fund_from_page/@count_new_page, :locale=>:tr)+" TL" unless @count_new_page == 0%></td>
         </tr>
       </table>
   </div>
@@ -69,9 +69,9 @@
         <td><%=link_to p.user.name, p.user %></td>
         <td><%=link_to p.title, p%></td>
         <td><%=link_to p.project.name, p.project%></td>
-        <td><%=p.goal%></td>
-        <td><%=p.collected%></td>
-        <td><%=p.total%></td>
+        <td><%=number_with_precision(p.goal, :locale=>:tr)%></td>
+        <td><%=number_with_precision(p.collected, :locale=>:tr)%></td>
+        <td><%=number_with_precision(p.total, :locale=>:tr)%></td>
         <td><%=p.min_date.to_date unless p.min_date.nil?%></td>
         <td><%=p.max_date.to_date unless p.min_date.nil?%></td>
       </tr>
@@ -95,11 +95,11 @@
         <td></td>
         <td></td>
         <td>Toplam:</td>
-        <td><%=@t_goal%></td>
-        <td><%=@t_collected%></td>
+        <td><%=number_with_precision(@t_goal, :locale=>:tr)%></td>
+        <td><%=number_with_precision(@t_collected, :locale=>:tr)%></td>
         <td><%=@t_count%></td>
         <td colspan="2">
-          <%= @t_collected/@t_count %>
+          <%= number_with_precision(@t_collected/@t_count,:locale=>:tr) unless @t_count== 0%> TL
         </td>
       </tr>
     </table>
