adds "google-site-verification"

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,6 +54,8 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
+  <meta name="google-site-verification" content="cs17hde7Adbjulw_JzfXMUKjab0wxEI7cfmIEJAZUG0" />
+
   <!-- CSS : implied media="all" -->
   <%= include_stylesheets :workspace, :media => 'all' %>
 
