Organization manage page, about us page

--- a/app/views/admin/organizations.html.erb
+++ b/app/views/admin/organizations.html.erb
@@ -14,7 +14,7 @@
               <%= form_tag(admin_report_page_path(organization), :method=>"get", :target=>"_blank") do |of|%>
               <p>
                 <input id="" name="to" type="text" value="" class="organization-report-calendar" /> ile
-                <input id="" name="from" type="text" value="" class="organization-report-calendar" /> arası <%=submit_tag "Raporu Görüntüle"%> </p>
+                <input id="" name="from" type="text" value="" class="organization-report-calendar" /> arası <%=submit_tag "Görüntüle"%> </p>
               <% end %>
               <p>
                   <% #TODO(berkan) below syntax might blow the page, if so change it. %>
