--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -102,18 +102,18 @@
 
 
 
-  <div class="profile clearfix dialog-trigger" id="p-sukru" data-dialog="#dialog-sb">
+  <div class="profile clearfix dialog-trigger" id="p-berkan" data-dialog="#dialog-bk">
     <div class="profile_pic clearfix">
       <div class="_pm_container">
         <div class="_pm_shadow r"></div>
         <div class="_pm_shadow l"></div>
         <div class="_pm">
           <div class="_pm_inner">
-            <img alt="Şükrü Bezen" class="alt-img" src="/images/about/sukru-bezen.jpg" width="152" />
+            <img alt="Berkan Kısaoğlu" class="alt-img" src="/images/about/berkan-kisaoglu.jpeg" width="152" />
             <div class="img_inner_shadow"></div>
           </div>
           <div class="_pm_details">
-            <div class="p-name">Şükrü Bezen</div>
+            <div class="p-name">Berkan Kısaoğlu</div>
             <div class="p-title">Yazılım Mühendisi</div>
           </div><!-- _pm_details -->
         </div>
@@ -311,43 +311,38 @@
   </div>
 </div>
 
-<div class="dialog dialog-about" id="dialog-sb" title="">
+<div class="dialog dialog-about" id="dialog-bk" title="">
   <div class="profile_pic clearfix">
     <div class="_pm_container">
       <div class="_pm_shadow r"></div>
       <div class="_pm_shadow l"></div>
       <div class="_pm">
         <div class="_pm_inner">
-          <img alt="Şükrü Bezen" class="alt-img" src="/images/about/sukru-bezen.jpg" width="152" />
+          <img alt="Berkan Kısaoğlu" class="alt-img" src="/images/about/berkan-kisaoglu.jpeg" width="152" />
           <div class="img_inner_shadow"></div>
         </div>
         <div class="_pm_details">
-          <div class="p-name">Şükrü Bezen</div>
+          <div class="p-name">Berkan Kısaoğlu</div>
           <div class="p-title">Yazılım Mühendisi</div>
         </div><!-- _pm_details -->
       </div>
     </div>
   </div>
   <div class="pr-details">
-    <p>BenVarım projesinde yazılım mühendisi olarak görev yapan Şükrü Bezen, lisans derecesini ODTÜ Bilgisayar Mühendisliğinden almış ve aynı bölümde master öğrencisi olarak eğitim hayatına devam etmektedir.</p>
+    <p>BenVarım projesinde yazılım mühendisi olarak görev yapan Berkan Kısaoğlu, 1987 yılında Osmaniye'de doğdu. İlköğretim ve lise derecelerini Osmaniye'de tamamlayan Berkan, lisans derecesini ODTÜ Bilgisayar Mühendisliği'nden aldı ve şuan ABD Silikon Vadisi'nde başarılı bir sosyal ağ start-up'ında çalışmaktadır.</p>
 
-    <p>Lisans derecesi süresince çeşitli sivil toplum örgütlerinin
-    çalışmalarına katılmış ve ilgili projelerin bağış kampanyalarının
-    tanıtılması sürecine katkıda bulunmuştur. Web ve mobil alanlarında
-    freelancer olarak  çalışmakta olan Şükrü, aynı zamanda Avrupa elektrik
-    elektronik öğrencileri topluluğunun Ankara kolunun başkan yardımcılığı
-    görevini sürdürmektedir. Hobileri arasında tango dansı ve yüzme sporu
-    yer almaktadır.</p>
-
-
+    <p>Lisans derecesi süresince web teknolojileri üzerine araştırmalar ve çalışmalar yapan Berkan, çeşitli ulusal yarışmalarda ödüller aldı. Bu süre zarfında sadece teknoloji alanında çalışmalar yapmakla kalmayıp, öğrenci topluluklarının, meslek örgütlerinin ve organizasyonların da çeşitli kademelerinde görev alan Berkan, mezuniyet sonrasında da bilgi birikimini aktarabileceği organizasyonlarda bulunmaya özen göstermiştir. </p>
     <div class="p-other">
-<a href="https://twitter.com/sukrubezen" target="_blank" title="Twitter profilini görüntüle">
+      <a href="http://www.linkedin.com/pub/berkan-k%C4%B1sao%C4%9Flu/2a/154/a29" target="_blank" title="LinkedIn profilini görüntüle">
+        <img src="/images/social_media_mini_icons/png/linkedin.png" />
+      </a>
+	  <a href="https://twitter.com/berkankisaoglu" target="_blank" title="Twitter profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/twitter.png" />
       </a>
-      <a href="https://www.facebook.com/index.htmll" target="_blank" title="Facebook profilini görüntüle">
+      <a href="https://www.facebook.com/berkan.kisaoglu" target="_blank" title="Facebook profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/facebook.png" />
       </a>
-      <a href="mailto:sukru@benvarim.com" title="E-posta gönder">
+      <a href="mailto:berkan@benvarim.com" title="E-posta gönder">
         <img src="/images/social_media_mini_icons/png/email.png" />
       </a>
     </div>
