adds bute to summary

--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -60,27 +60,6 @@
   </div><!-- end of .profile -->
 
 
-  <div class="profile clearfix dialog-trigger" id="p-onuralp" data-dialog="#dialog-oa">
-    <div class="profile_pic clearfix">
-      <div class="_pm_container">
-        <div class="_pm_shadow r"></div>
-        <div class="_pm_shadow l"></div>
-        <div class="_pm">
-          <div class="_pm_inner">
-            <img alt="Onuralp Armağan" class="alt-img" src="/images/about/onuralp-armagan.jpg" width="152" />
-            <div class="img_inner_shadow"></div>
-          </div>
-          <div class="_pm_details">
-            <div class="p-name">Onuralp Armağan</div>
-            <div class="p-title">Mali Danışman</div>
-          </div><!-- _pm_details -->
-        </div>
-      </div>
-    </div>
-  </div><!-- end of .profile -->
-
-
-
   <div class="profile clearfix dialog-trigger" id="p-melis" data-dialog="#dialog-mo">
     <div class="profile_pic clearfix">
       <div class="_pm_container">
@@ -115,6 +94,46 @@
           <div class="_pm_details">
             <div class="p-name">Berkan Kısaoğlu</div>
             <div class="p-title">Yazılım Mühendisi</div>
+          </div><!-- _pm_details -->
+        </div>
+      </div>
+    </div>
+  </div><!-- end of .profile -->
+
+
+  <div class="profile clearfix dialog-trigger" id="p-bute" data-dialog="#dialog-ba">
+    <div class="profile_pic clearfix">
+      <div class="_pm_container">
+        <div class="_pm_shadow r"></div>
+        <div class="_pm_shadow l"></div>
+        <div class="_pm">
+          <div class="_pm_inner">
+            <img alt="Bute Akpınarlı" class="alt-img" src="/images/about/bute-akpinarli.png" width="152" />
+            <div class="img_inner_shadow"></div>
+          </div>
+          <div class="_pm_details">
+            <div class="p-name">Bute Akpınarlı</div>
+            <div class="p-title">Program Koordinatörü</div>
+          </div><!-- _pm_details -->
+        </div>
+      </div>
+    </div>
+  </div><!-- end of .profile -->
+
+
+  <div class="profile clearfix dialog-trigger" id="p-onuralp" data-dialog="#dialog-oa">
+    <div class="profile_pic clearfix">
+      <div class="_pm_container">
+        <div class="_pm_shadow r"></div>
+        <div class="_pm_shadow l"></div>
+        <div class="_pm">
+          <div class="_pm_inner">
+            <img alt="Onuralp Armağan" class="alt-img" src="/images/about/onuralp-armagan.jpg" width="152" />
+            <div class="img_inner_shadow"></div>
+          </div>
+          <div class="_pm_details">
+            <div class="p-name">Onuralp Armağan</div>
+            <div class="p-title">Mali Danışman</div>
           </div><!-- _pm_details -->
         </div>
       </div>
@@ -319,10 +338,6 @@
     </div>
   </div>
 </div>
-
-
-
-
 <div class="dialog dialog-about" id="dialog-ba" title="">
   <div class="profile_pic clearfix">
     <div class="_pm_container">
