save onuralp from kerane phone calls.

--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -27,6 +27,11 @@
           <td><strong>Telefon:</strong></td>
           <td>0(216) 373-9031</td>
         </tr>
+        <tr>
+          <td colspan="2">
+            <small>Desteklemek istediğiniz projeler ile ilgili bilgi almak için lütfen projenin ilgili olduğu dernek ve vakfı arayınız. Dernek ve vakıfların iletişim bilgilerine kurum tanıtım sayfalarından ulaşabilirsiniz.</small>
+          </td>
+        </tr>
       </table>
 
 
