updates homepage organizations list

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -45,7 +45,19 @@
         -->
 
         <a href="https://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
+
         <a href="https://www.benvarim.com/kurum/biseg-bir-insan-saglik-ve-egitim-koyleri-gonulluler-dernegi" id="fc-biseg" class="fc-default" title="BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği">BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği</a>
+
+        <!--
+        <a href="https://www.benvarim.com/kurum/sizofreni-dernekleri-federasyonu" id="fc-sizofreni" class="fc-default hidden" title="Şizofreni Dernekleri Federasyonu">Şizofreni Dernekleri Federasyonu</a>
+        -->
+
+        <a href="https://www.benvarim.com/kurum/tocev-tuvana-okuma-istekli-cocuk-egitim-vakfi" id="fc-tocev" class="fc-default" title="TOÇEV Tüvana Okuma İstekli Çocuk Eğitim Vakfı">TOÇEV Tüvana Okuma İstekli Çocuk Eğitim Vakfı</a>
+
+        <a href="https://www.benvarim.com/kurum/turkiye-omurilik-felclileri-dernegi-tofd" id="fc-tofd" class="fc-default" title="Türkiye Omurilik Felçlileri Derneği (TOFD)">Türkiye Omurilik Felçlileri Derneği (TOFD)</a>
+
+
+
 
         <!--
           <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
